<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gendart</name>
  <version>2.0.1</version>
  <description>
  Dart ROS message and service generators.
  </description>
  <maintainer email="tim.a.whiting@gmail.com">Tim Whiting</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <exec_depend>genmsg</exec_depend>

  <export>
    <message_generator>dart</message_generator>
  </export>
</package>
